--- a/src/index.html
+++ b/src/index.html
@@ -10,10 +10,40 @@
       integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
       crossorigin="anonymous"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../node_modules/basiclightbox/dist/basicLightbox.min.css">
   </head>
   <body>
-    <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
-    <include src="./partials/example.html"></include>
+     <h1>Search some pictures of...</h1>
+    <form class="search-form" id="search-form">
+      <input
+        type="text"
+        name="query"
+        autocomplete="off"
+        placeholder="Search images..."
+        class="search-area"
+      />
+      <button type="submit" class="search-btn btn">Search
+        <span class="material-icons md-18">
+          search
+          </span>
+      </button>
+
+    </form>
+    <ul class="gallery"></ul>
+    <div class="btn-container">
+      
+        <button type="button" class=" load-more-btn btn" data-action="load-more">
+          Load more   
+        </button>
+      
+        <button type="button"  class=" up-btn btn " data-action="back-up">
+      <span class="material-icons md-36">
+        home
+        </span>
+       </button>
+ 
+   
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
